Optimize jlink size by explicitly adding crypto modules instead of binding all services